2002-12-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c (type_is_value_type): fix typo

2002-12-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_value.c rbgobj_gvalue_to_rvalue(), rbgobj_rvalue_to_gvalue():
	Change behavior of G_TYPE_INTERFACE(same as G_TYPE_OBJECT).

2002-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_boxed.c, rbgobj_type.c, rbgobj_param.c, rbgobj_object.c: 
	Apply rb_define_alloc_func() of ruby-1.8.x.

2002-12-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgutil.c: Check 2nd argument is hash. 

2002-12-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgutil.[ch]: Add G_SET_SYMBOL_PROPERTY(gtype, name).

2002-12-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Add rb_cSymbol as G_TYPE_STRING. 

2002-11-27  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbgobj_closure.c (rclosure_marshal): check if return_value's type
	is valid. Reported by Joshua Keith <joshuakeith@linuxmail.org>.

2002-11-24  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgutil.c: remove rbgutil_val2cstr().

	* src/rbglib.h: change StringValuePtr() definition to the same as
	ruby-1.7. and change RVAL2CSTR() to use the StringValuePtr().

2002-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_value.c: rbgobj_rvalue_to_gvalue() support Symbol value 
	when G_TYPE_STRING is required.

2002-11-22  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c, src/rbgobj_signal.c: change
	GLib::Instantiatable.signals and GLib::Object.properties to return
	array of strings. (instead of array of specific objects)
	* rbgobj_signal.c: disable some experimental code.

2002-11-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c: Fix typos in error messages(GLib::GObject to GLib::Object).

2002-11-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_signal.c: BugFix of rbgobj_set/get_signal_func.

2002-11-10  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: stop appending '-g' to $CFLAGS.
